# llms-you-cant-please-them-all

./: README.md  metrics.py  pyproject.toml  references.md
data/: evaluation_prompts.json  topics.json
docs/: references.md
src/: generate_faker_essays.py
utils/: check_split.py  create_word_list.py  generate_random_essays.py  metrics.py
